added user report and Raven link to header

--- a/WebContent/header.html
+++ b/WebContent/header.html
@@ -8,7 +8,9 @@
 <div id="kumc_header_links"><a href="http://www.ku.edu/"
 	title="University of Kansas">KU</a>&#160; |&#160; <a
 	href="http://www.kumc.edu/" title="University of Kansas Medical Center"
-	class="kumc_homelink">Medical Center</a>&#160;</div>
+	class="kumc_homelink">Medical Center</a>&#160;|&#160; <a
+	href="index.jsp" title="Raven"
+	class="kumc_homelink">Raven</a>&#160;</div>
 <div id="kumc_header_logo"><a href="http://www.kumc.edu/"><img
 	src="static/kumc/masthead_logo.gif"
 	alt="The University of Kansas Medical Center"
