link heron page from data page
--HG--
branch : frontiers-layout

--- a/htdocs/u/data.html
+++ b/htdocs/u/data.html
@@ -16,7 +16,7 @@
   <h2>Hypothesis Generation and Cohort Discovery with HERON</h2>
 
   <ul>
-    <li><a href="http://informatics.kumc.edu/work/ticket/238#@@">Learn how to go fishin' with HERON.</a></li>
+    <li><a href="heron">Learn how to go fishin' with HERON.</a></li>
     <li><a href="http://informatics.kumc.edu/work/ticket/489#@@HERON">Go fishin' with HERON now!</a></li>
   </ul>
 
