--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,49 +2,116 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Raven Research Portal</title>
-  <link rel="stylesheet" href="style/raven.css" />
+
+  <link rel="stylesheet" type="text/css" href=
+  "http://www.kumc.edu/css/template2009/reset.css" />
+  <link rel="stylesheet" type="text/css" href=
+  "http://www.kumc.edu/css/template2009/grid-min.css" />
+  <link rel="stylesheet" type="text/css" href=
+  "http://www.kumc.edu/css/template2009/kulayout.css" />
+  <link rel="stylesheet" type="text/css" href=
+  "http://www.kumc.edu/css/template2009/kupresentation.css" />
+
+
+  <!--[if IE 6]>
+                                <link rel="stylesheet" type="text/css" href="http://www.kumc.edu/css/template2009/ku_ie6.css" />
+                         <![endif]--><!--[if IE 7]>
+                                <link rel="stylesheet" type="text/css" href="http://www.kumc.edu/css/template2009/ku_ie7.css" />
+                         <![endif]--><!--[if IE 8]>
+                                <link rel="stylesheet" type="text/css" href="http://www.kumc.edu/css/template2009/ku_ie8.css" />
+                                <![endif]-->
+  <link rel="stylesheet" type="text/css" href=
+  "http://www.kumc.edu/css/template2009/kuprint.css" media=
+  "print" />
+  <link rel="shortcut icon" href="http://www.ku.edu/favicon.ico" />
+  <script src=
+  "http://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js"
+  type="text/javascript">
+</script>
+  <script src="http://www.kumc.edu/js/ku/kutemplate_2009.js" type=
+  "text/javascript">
+</script>
+  <script src=
+  "http://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type=
+  "text/javascript">
+</script>
+
+
 </head>
 <body>
-  <div class="context">
-    <a href="http://www.kumc.edu/">KUMC</a> &gt;
-    <a href="http://frontiers.kumc.edu/">Frontiers</a> &gt;
-    <a href="http://raven.kumc.edu/">Raven</a>
-    <address>
-      <a href="http://informatics.kumc.edu/work/wiki/RavenMockUp#@@"
-	 >Contact Us</a>
-    </address>
-  </div>
-  <h1>
-      <img class="logo" src="av/raven-mascot.png" alt=""/>
-      Raven Research Portal</h1>
-
-  <div class="single-task">
-
-    <div class="task"><a href="u/main.html">Log In</a></div>
-
-    <p>Frontiers investigators are welcome to log in to the RAVEN
-    portal using the KU Medical Center Central Authentication
-    Service.</p>
-
-    <p>If you do not have a KUMC account:</p>
-    <ul>
-      <li><a href="https://redcap.kumc.edu/surveys/?s=bKaC6s"
-	     >Apply for an account</a></li>
-    </ul>
-
-  </div>
-    <div class="photo">
-      <img src="av/raven-3764364235.jpg" alt=""/>
-
-      <p>The raven is this website's inspirational mascot. Ravens, the
-      largest of the corvids, are known for their intelligence and
-      predisposition to collect things.
-      </p>
-
-      <address>photo credit: <a
-      href="http://www.fotopedia.com/items/flickr-3764364235">Ingrid
-      Taylor</a></address>
+  <div id="kutemplate">
+    <div class="span-24 last" id="topnav">
+      <h2 class="unit">Raven Research Portal</h2>
+      <div id="toptabnav">
+	<p><a href="http://www.kumc.edu/">KUMC</a>&#160;&gt;&#160;<a
+	href="http://frontiers.kumc.edu/">Frontiers</a
+	>&#160;&gt;&#160;<a href="http://raven.kumc.edu/">Raven</a>
+	</p>
+      </div>
     </div>
 
+    <div id="content" class="container">
+      <div class="span-5">
+	<div id="leftnavigation">
+	  <div id="menu">
+	    <ul>
+	      <li>
+		<a href="http://informatics.kumc.edu/work/wiki/RavenMockUp#@@"
+		   >Contact Us</a>
+	      </li>
+	    </ul>
+	  </div>
+	</div>
+      </div>
+
+      <div id="main" class="withnav span-19 last">
+	<a name="maincontent" id="maincontent"></a>
+	
+	<div class="span-14">
+	  <div class="photo">
+	    <img src="av/raven-3764364235.jpg" alt=""/>
+	  </div>
+	  
+	  <h1>Raven Research Portal</h1>
+	  
+	  <p>Frontiers investigators are welcome to log in to the
+	  RAVEN portal using the KU Medical Center Central
+	  Authentication Service.</p>
+	  
+	  <p>If you do not have a KUMC account:</p>
+	  <ul>
+	    <li><a href="https://redcap.kumc.edu/surveys/?s=bKaC6s"
+		   >Apply for an account</a></li>
+	  </ul>
+	  
+	  <hr />
+	  <p>The raven is this website's inspirational
+	  mascot. Ravens, the largest of the corvids, are known for
+	  their intelligence and predisposition to collect things.
+	  </p>
+	
+	  <address>photo credit: <a
+	  href="http://www.fotopedia.com/items/flickr-3764364235">Ingrid
+	  Taylor</a></address>
+	</div>
+      
+	<div class="span-5 last" id="rightnav">
+	  <div class="bluebox span-5 last">
+	    <div class="header png">
+	      Are you an investigator?
+	    </div>
+	    
+	    <div class="content png">
+	      <p class="center">Login to the<br />
+	      <strong><a href="u/main.html" title=
+			 "@@@Raven research portal opens in new window - authentication required"
+			 target="_blank">Raven Research
+	      Portal</a></strong></p><br />
+	    </div>
+	  </div>
+	</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
