integrate main (logged in) page with layout template (#371)   - allow public menu to be different from logged-in menu     - todo: factor out common menu   - todo: remove layout details from main div
--HG--
branch : frontiers-layout

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -8,6 +8,15 @@
   <title>Raven Research Portal</title>
 </head>
 <body>
+  <div id="menu">
+    <ul>
+      <li>
+	<a href="http://informatics.kumc.edu/work/wiki/RavenMockUp#@@"
+	   >Contact Us</a>
+      </li>
+    </ul>
+  </div>
+
   <div id="main">
     <div class="span-14">
       <div class="photo">
