--- a/htdocs/u/main.html
+++ b/htdocs/u/main.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      >
+<xi:include href="../kumc_layout.xml" />
 <head>
   <title>Raven Research Portal</title>
-  <link rel="stylesheet" href="../style/raven.css" />
 </head>
 <body>
 
-  <div class="context">
-    <a href="http://www.kumc.edu/">KUMC</a> &gt;
-    <a href="http://frontiers.kumc.edu/">Frontiers</a> &gt;
-    <a href="http://raven.kumc.edu/">Raven</a>
-
-    <address>
-      <a href="http://informatics.kumc.edu/work/wiki/RavenMockUp#@@"
-	 >Contact Us</a>
-    </address>
-{{user}}
-<a href="@@"><button>Logout</button></a>
-<br />
-<form action="search@@" method="GET">
-<input name="q" /><input type="submit" value="Search" />
-</form>
-  </div>
-  <h1>
-    <img class="logo" src="../av/raven-mascot.png" alt="Raven"/>
-    Raven Research Portal
-  </h1>
-
-  <div class="balance">
-  <div class="nav">
-  <ul class="basictab">
-    <li><a href="train">Education &amp;<br /> Training</a></li>
-    <li><a href="plan">Planning Your<br />Research</a></li>
-    <li><a href="data">Data Capture and<br />Exploration Tools</a></li>
-    <li><a href="fund">Funding<br />Opportunities</a></li>
-  </ul>
-  </div>
+  <div id="menu">
+    <ul>
+      <li><a href="train.html">Education &amp;<br /> Training</a></li>
+      <li><a href="plan.html">Planning Your<br />Research</a></li>
+      <li><a href="data.html">Data Capture and<br />Exploration Tools</a></li>
+      <li><a href="fund.html">Funding<br />Opportunities</a></li>
+    </ul>
   </div>
 
-  <h2>Tools</h2>
-  <ul>
-    <li>HERON</li>
-    <li>CRIS</li>
-    <li>REDCap</li>
-  </ul>
-
-  <ul>
-    <li>Information Resources</li>
-    <li>KUMC Centers and Resources</li>
-  </ul>
-
-  <div>
-    KUMC Events Calendar
-
-    <p>
-      <em>@@extract some events?
-      <br />
-      or maybe a blog?
-      </em>
-    </p>
+  <div id="main">
+    <div class="span-14"> <!-- @@move to layout -->
+      <h1>Raven Research Portal</h1>
+      
+      <ul>
+	<li>Information Resources @@link</li>
+	<li>KUMC Centers and Resources @@link</li>
+      </ul>
+      
+      <div>
+	KUMC Events Calendar
+	
+	<p>
+	  <em>@@extract some events?
+	  <br />
+	or maybe a blog?
+	  </em>
+	</p>
+      </div>
+    </div>
   </div>
 
+  <div id="rightnav">
+    <div class="span-5 last">
+	<div>
+	  {{user}}
+	  <a href="@@"><button>Logout</button></a>
+	</div>
+      <div class="header png"><!--@@??-->    
+	<h2>Tools</h2>
+      </div>
+      <div class="content png"><!--@@??-->
+	<ul class="links">
+	  <li>HERON</li>
+	  <li>CRIS</li>
+	  <li>REDCap</li>
+	</ul>
+	
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
