--- a/htdocs/u/plan.html
+++ b/htdocs/u/plan.html
@@ -1,19 +1,21 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>Planning Your Research / RAVEN</title>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      >
+<xi:include href="../kumc_layout.xml" />
+<head>
+  <title>Planning Your Research / RAVEN</title>
 </head>
 <body>
-<h1>Planning Your Research</h1>
+  <xi:include href="raven-menu.xml" />
 
-<address>
-{{welcome/logout}}
-{{contact us}}
-{{search}}
-</address>
+  <div id="main">
+    <div class="span-14"> <!-- @@move to layout -->
+      <h1>Planning Your Research</h1>
 
-{{menubar}}
-
-
+<p>
 Lorem ipsum...
+</p>
 
 <ul>
   <li>
@@ -27,6 +29,11 @@ Lorem ipsum...
 	 >Ethics consult</a>
   </li>
 </ul>
+</div>
+</div>
+
+  <xi:include href="raven-tools.xml" />
+
 </body>
 </html>
 
