--- a/htdocs/u/fund.html
+++ b/htdocs/u/fund.html
@@ -1,8 +1,19 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      >
+<xi:include href="../kumc_layout.xml" />
 <head>
   <title>Funding Opportunities / RAVEN</title>
 </head>
 <body>
+
+  <xi:include href="raven-menu.xml" />
+
+  <div id="main">
+    <div class="span-14"> <!-- @@move to layout -->
+
+
   <h1>Funding Opportunities</h1>
 
 <p>Lorem ipsum ... </p>
@@ -13,6 +24,11 @@
 	 >KUMC Research Institute Funding Opportunities</a></li>
   <li>... </li>
 </ul>
+</div>
+</div>
+
+  <xi:include href="raven-tools.xml" />
+
 </body>
 </html>
 
