--- a/htdocs/u/heron.html
+++ b/htdocs/u/heron.html
@@ -1,8 +1,19 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      >
+<xi:include href="../kumc_layout.xml" />
 <head>
   <title>HERON / RAVEN</title>
 </head>
 <body>
+
+
+  <xi:include href="raven-menu.xml" />
+
+  <div id="main">
+    <div class="span-14"> <!-- @@move to layout -->
+
   <h1>HERON</h1>
 
   <p>HERON (Healthcare Enterprise Repository for Ontological Narration) allows you to explore de-identified data from Epic/O2 (the hospital electronic medical records) and IDX (the clinical billing system). @@one sentence case study.
@@ -25,7 +36,10 @@
 
 <p>For access to identified data, you will need an Institutional Review Board (IRB) approved protocol.</p>
 
-{{toolmenu}}
+    </div>
+  </div>
+
+  <xi:include href="raven-tools.xml" />
 
 </body>
 </html>
