--- a/htdocs/u/train.html
+++ b/htdocs/u/train.html
@@ -1,22 +1,30 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>Education and Training / RAVEN</title>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:xi="http://www.w3.org/2001/XInclude"
+      >
+<xi:include href="../kumc_layout.xml" />
+<head>
+<title>Education and Training / RAVEN</title>
 </head>
 <body>
+  <xi:include href="raven-menu.xml" />
+
+  <div id="main">
+    <div class="span-14"> <!-- @@move to layout -->
+
 <h1>Education and Training</h1>
 
-<address>
-{{welcome/logout}}
-{{contact us}}
-{{search}}
-</address>
-
-{{menubar}}
 
 <p>Lorem ipsum...</p>
 
 <ul>
 <li>Lance's survey</li>
 </ul>
+</div>
+</div>
+
+  <xi:include href="raven-tools.xml" />
+
 </body>
 </html>
 
