--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,12 +9,7 @@
 </head>
 <body>
   <div id="menu">
-    <ul>
-      <li>
-	<a href="http://informatics.kumc.edu/work/wiki/RavenMockUp#@@"
-	   >Contact Us</a>
-      </li>
-    </ul>
+    <p>&#160;</p>
   </div>
 
   <div id="main">
@@ -28,12 +23,6 @@
       <p>Frontiers investigators are welcome to log in to the
       RAVEN portal using the KU Medical Center Central
       Authentication Service.</p>
-      
-      <p>If you do not have a KUMC account:</p>
-      <ul>
-	<li><a href="https://redcap.kumc.edu/surveys/?s=bKaC6s"
-	       >Apply for an account</a></li>
-      </ul>
       
       <hr />
       <p>The raven is this website's inspirational
@@ -60,6 +49,16 @@
 		   >Raven Research
 	Portal</a></strong></p><br />
       </div>
+
+      <ul class="links">
+	<li><a href="https://redcap.kumc.edu/surveys/?s=bKaC6s"
+	       >Apply for an account</a></li>
+	<li>
+	  <a href="https://redcap.kumc.edu/surveys/?s=3SBkPg"
+	     >Feedback/Contact</a>
+	</li>
+      </ul>
+
     </div>
   </div>
 
