- make top navigation link relative to deployed location - factor out span-14 from main - tweak login text
--HG--
branch : frontiers-layout

--- a/htdocs/u/main.html
+++ b/htdocs/u/main.html
@@ -4,15 +4,14 @@
       >
 <xi:include href="../kumc_layout.xml" />
 <head>
-  <title>Raven Research Portal</title>
+  <title>Raven Research Portal: Welcome</title>
 </head>
 <body>
 
   <xi:include href="raven-menu.xml" />
 
   <div id="main">
-    <div class="span-14"> <!-- @@move to layout -->
-      <h1>Raven Research Portal</h1>
+      <h1>Welcome to the Raven Research Portal</h1>
 
       <p>RAVEN is an interactive system that provides one
       stop shopping for research needs. Through a single site,
@@ -27,7 +26,6 @@
       </ul>
 
 
-    </div>
   </div>
 
   <div id="rightnav">
