--- a/htdocs/u/data.html
+++ b/htdocs/u/data.html
@@ -17,11 +17,11 @@
 
   <ul>
     <li><a href="heron.html">Learn how to go fishin' with HERON.</a></li>
-    <li><a href="http://informatics.kumc.edu/work/ticket/489#@@HERON">Go fishin' with HERON now!</a></li>
+    <li><a href="https://raven.kumc.edu/raven/AuthServlet">Go fishin' with HERON now!</a></li>
   </ul>
 
 
-  <p><small><a href="http://informatics.kumc.edu/work/ticket/489#@@">HERON DROC: administrative access</a></small></p>
+  <p><b><a href="http://informatics.kumc.edu/work/ticket/489#@@">HERON DROC: administrative access</a></b></p>
 </div>
 
 <div>
@@ -44,5 +44,3 @@
 
 </body>
 </html>
-
-
