--- a/htdocs/u/heron.html
+++ b/htdocs/u/heron.html
@@ -14,13 +14,13 @@
   <div id="main">
   <h1>HERON</h1>
 
-  <p>HERON (Healthcare Enterprise Repository for Ontological Narration) allows you to explore de-identified data from Epic/O2 (the hospital electronic medical records) and IDX (the clinical billing system). @@one sentence case study.
+  <p>HERON (Healthcare Enterprise Repository for Ontological Narration) allows you to explore de-identified data from Epic/O2 (the hospital electronic medical records) and IDX (the clinical billing system). <!-- @@one sentence case study. -->
 </p>
 
 <ul>
-<li>Getting Started with HERON @@slides/video</li>
+<li><a href="http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials">Getting Started with HERON</a> <!-- transclude out of wiki? --></li>
 
-<li>Medical Informatics bi-weekly user meetings @@where/when</li>
+<li><a href="captool.html#fct-clinic">Frontiers Clinical/Translational Informatics Clinic every other Tuesday</a></li>
 </ul>
 
 <p>Access to de-identified data is non-human subjects research and does not require IRB approval. For qualified faculty who want view-only access to do patient count queries, executing a system access agreement is the only requirement.</p>
