--- a/htdocs/u/main.html
+++ b/htdocs/u/main.html
@@ -36,10 +36,10 @@
 	    <input type="submit" value="Logout" />
 	  </form>
 	</div>
-      <div class="header png"><!--@@??-->    
+      <div class="header png">
 	<h2>Nearby</h2>
       </div>
-      <div class="content png"><!--@@??-->
+      <div class="content png">
 	<ul>
 	  <li><a href="http://www2.kumc.edu/ir/">KUMC Information Resources</a></li>
 	  <li><a href="http://www.kumc.edu/centers-and-resources.html">KUMC Centers and Resources</a></li>
