note more from RegulatoryDiscussion (#371)
--HG--
branch : frontiers-layout

--- a/htdocs/u/plan.html
+++ b/htdocs/u/plan.html
@@ -27,6 +27,9 @@ Lorem ipsum...
   <li><a href="#@@"
 	 >Ethics consult</a>
   </li>
+  <li>@@more ... from
+  <a href="http://informatics.kumc.edu/work/wiki/RegulatoryDiscussion"
+     >RegulatoryDiscussion</a></li>
 </ul>
 </div>
 
