pare to deploy as heron.kumc.edu (#521, #518, #489, #522)  - use security notice rather than redirect for http://heron.kumc.edu/ (#521)  - apache configuration for https://heron.kumc.edu/ connected to jboss  - add prod maven profile
--HG--
branch : frontiers-layout

--- a/htdocs/u/data.html
+++ b/htdocs/u/data.html
@@ -17,7 +17,8 @@
 
   <ul>
     <li><a href="heron.html">Learn how to go fishin' with HERON.</a></li>
-    <li><a href="https://raven.kumc.edu/raven/AuthServlet">Go fishin' with HERON now!</a></li>
+    <li><a href="https://heron.kumc.edu/heron/">Go fishin' with HERON now!</a>
+    </li>
   </ul>
 
 </div>
