hCard-based mock LDAP test harness seems to work  - factor HCardContext out of LDAPEnterpriseTest  - one real entry in the mock data
--HG--
branch : frontiers-layout

--- a/src/test/resources/mockDirectory.html
+++ b/src/test/resources/mockDirectory.html
@@ -1,2 +1,14 @@
 <!DOCTYPE html>
-<html><head><title>hi there</title></head></html>
+<html>
+    <head>
+        <title>John Smith Medical Center Directory</title>
+    </head>
+    <body>
+        <div class="hcard" id="john.smith">
+            <span class="n"><b class="family-name">Smith</b>, <span class="given-name">John</span></span>
+            <br /><b class="email">john.smith@js.example</b>
+            <br />Faculty? <em class="kumcPersonFaculty">Y</em>
+            <br />Job Code: <code class="kumcPersonJobcode">1234</code>
+        </div>
+    </body>
+</html>
