add HERON link to Raven main page (#545)
real HERON link, not test in tools menu

--HG--
branch : frontiers-layout

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,14 +40,14 @@
       </div>
       
       <div class="content png">
-	<p class="center">Continue to</p>
+	<p>&#160;</p>
 	<ul><li>
 	  <strong><a href="u/main.html" title=
 		     "Raven research portal - authentication required"
-		     >Raven Research Portal Services</a></strong></li>
+		     >Login for Raven Research Portal Services</a></strong></li>
 	</ul>
-	<p>using the <a href="https://cas.kumc.edu/cas/login"
-	>KUMC Central Authentication Server (CAS) Login</a> service.
+	<p><small>using the <a href="https://cas.kumc.edu/cas/login"
+	>KUMC Central Authentication Server (CAS) Login</a> service.</small>
 	</p>
       </div>
 
