--- a/htdocs/u/main.html
+++ b/htdocs/u/main.html
@@ -41,6 +41,7 @@
       </div>
       <div class="content png">
 	<ul>
+	  <li><a href="https://heron.kumc.edu/raven/">HERON</a></li>
 	  <li><a href="http://www2.kumc.edu/ir/">KUMC Information Resources</a></li>
 	  <li><a href="http://www.kumc.edu/centers-and-resources.html">KUMC Centers and Resources</a></li>
 	</ul>
