replace deprecated tt by samp in security notices
--HG--
branch : frontiers-layout

--- a/apache-conf-raven/htdocs/index.html
+++ b/apache-conf-raven/htdocs/index.html
@@ -5,14 +5,14 @@
 <h1>RAVEN is a secure service</h1>
 <p>Please access the <a href="https://raven.kumc.edu/raven/">RAVEN
 Research Portal</a> by its secure address:
-<tt><a href="https://raven.kumc.edu/">https://raven.kumc.edu/</a></tt>.
+<samp><a href="https://raven.kumc.edu/">https://raven.kumc.edu/</a></samp>.
 </p>
 
 <div><h2>Q &amp; A</h2>
 <dl>
-<dt>Why can't I just type <tt>heron.kumc.edu</tt>?</dt>
+<dt>Why can't I just type <samp>heron.kumc.edu</samp>?</dt>
 
-<dd>Unless you include the <tt><strong>https:</strong>//raven.kumc.edu/</tt>
+<dd>Unless you include the <samp><strong>https:</strong>//raven.kumc.edu/</samp>
 when you type in an address, the initial connection to the web server is
 insecure and can be manipulated by an attacker. For details, see the
 <a href=
