--- a/apache-conf/htdocs/index.html
+++ b/apache-conf/htdocs/index.html
@@ -5,14 +5,14 @@
 <h1>HERON is a secure service</h1>
 <p>Please access the <a href="https://heron.kumc.edu/heron/">HERON
 Research Data Repository</a> by its secure address:
-<tt><a href="https://heron.kumc.edu/">https://heron.kumc.edu/</a></tt>.
+<samp><a href="https://heron.kumc.edu/">https://heron.kumc.edu/</a></samp>.
 </p>
 
 <div><h2>Q &amp; A</h2>
 <dl>
-<dt>Why can't I just type <tt>heron.kumc.edu</tt>?</dt>
+<dt>Why can't I just type <samp>heron.kumc.edu</samp>?</dt>
 
-<dd>Unless you include the <tt><strong>https:</strong>//heron.kumc.edu/</tt>
+<dd>Unless you include the <samp><strong>https:</strong>//heron.kumc.edu/</samp>
 when you type in an address, the initial connection to the web server is
 insecure and can be manipulated by an attacker. For details, see the
 <a href=
