added title to HERON checklist page   - add title to Agent interface, citing LDAP spec     - add title throughout, including hcard spec citation in mock data   - fixed rawtypes messiness in findByName   - move stringTemplate doc citation from checklist model to template   - fixed if/then syntax in template
--HG--
branch : frontiers-layout

--- a/src/test/resources/mockDirectory.html
+++ b/src/test/resources/mockDirectory.html
@@ -4,9 +4,13 @@
 <title>John Smith Medical Center Directory</title>
 </head>
 <body>
+
+<p><em>See the <a href="http://microformats.org/wiki/hcard">hCard</a> spec for use of class names as vCard property names.</em></p>
+
 <ul>
 	<li class="hcard" id="john.smith"><span class="n"><b
-		class="family-name">Smith</b>, <span class="given-name">John</span></span> <br />
+		class="family-name">Smith</b>, <span class="given-name">John</span></span>
+		<p>Title: <strong class="title">Chair of Department of Neurology</strong></p>
 	<b class="email">john.smith@js.example</b> <br />
 	Faculty? <em class="kumcPersonFaculty">Y</em> <br />
 	Job Code: <code class="kumcPersonJobcode">1234</code></li>
