--- a/src/test/resources/mockDirectory.html
+++ b/src/test/resources/mockDirectory.html
@@ -13,7 +13,8 @@
 		<p>Title: <strong class="title">Chair of Department of Neurology</strong></p>
 	<b class="email">john.smith@js.example</b> <br />
 	Faculty? <em class="kumcPersonFaculty">Y</em> <br />
-	Job Code: <code class="kumcPersonJobcode">1234</code></li>
+	Job Code: <code class="kumcPersonJobcode">1234</code><br />
+	trained thru: <strong class="dtend">2012-01-01</strong></li>
 
 	<li class="hcard" id="bill.student"><span class="n"><b
 		class="family-name">Student</b>, <span class="given-name">Bill</span></span>
