--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,45 +1,16 @@
-<jsp:root version="2.1"
-          xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
-          xmlns:x="http://java.sun.com/jsp/jstl/xml">
-  <!--
-  aha!
-  the right XML NS URI is given in
-  http://download.oracle.com/javaee/5/jstl/1.1/docs/tlddocs/x/tld-summary.html
-  I was really struggling with:
-  org.apache.jasper.JasperException: /index.jsp(14,31) According to TLD or attribute directive in tag file, attribute xslt does not accept any expressions
-  -->
+<ui:composition template="kumc_layout.xhtml"
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:f="http://java.sun.com/jsf/core"
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:ui="http://java.sun.com/jsf/facelets">
 
-  <jsp:directive.page contentType="text/html; charset=utf-8"
-                      pageEncoding="utf-8"/>
-  <jsp:directive.page import="edu.kumc.informatics.heron.util.StaticDataUtil" />
-  <jsp:directive.page import="java.util.Properties" />
-  <!-- TODO: restore <jsp:directive.page errorPage="error_page.jsp" /> -->
-  <jsp:scriptlet>
-    Properties prop = StaticDataUtil.getSoleInstance().getProperties();
-  </jsp:scriptlet>
 
-  <c:import var="layout" url="kumc_layout.xml"/>
-  <x:transform xslt="${layout}">
-    <html lang="en"
-          xmlns="http://www.w3.org/1999/xhtml">
-      <head>
-        <title>HERON Research Data Repository</title>
-        <!-- TODO: this is known at build time; no need to compute it at runtime. -->
-        <jsp:element name="meta">
-          <jsp:attribute name="name">build-number</jsp:attribute>
-          <jsp:attribute name="content">
-                  <jsp:expression>
-                    prop.getProperty("scm.version").substring(0, 12)
-                  </jsp:expression>
-          </jsp:attribute>
-        </jsp:element>
+  <ui:define name="title">HERON Research Data Repository</ui:define>
           <style type="text/css">
             .photo {text-align: center; margin-bottom: 1em }
           </style>
-      </head>
-      <body>
-        <div id="menu">
+
+        <ui:define name="menu">
           <ul>
             <li><a href="AuthServlet">HERON i2b2 Query and Analysis Tool</a>
             </li>
@@ -55,14 +26,14 @@
                 >Biostatistics Department Project Request Form</a>
             </li>
           </ul>
-        </div>
+	</ui:define>
 
-        <div id="main">
+        <ui:define name="main">
           <div id="heron-tricol-01" class="photo">
             <img src="static/220px-Heron_tricol_01.JPG" alt=""/>
           </div>
 
-          <h1>HERON Research Data Repository</h1>
+          <ui:define name="h1">HERON Research Data Repository</ui:define>
 
           <!-- TODO: why does this para turn blue? -->
           <p>HERON (Healthcare Enterprise Repository for Ontological Narration)
@@ -116,16 +87,13 @@
                  >Christopher Harshaw</a></small>
           </p>
 
-        </div>
+	</ui:define>
 
-        <div id="rightnav">
-          <div>
-            <b id="user-id">
-              <jsp:expression>request.getRemoteUser()</jsp:expression></b>
-          </div>
+        <div name="rightnav">
+          <ui:insert name="login-section">
+            <ui:define name="user-id">
+              $$ request.getRemoteUser() $$
+	    </ui:define>
+	  </ui:insert>
         </div>
-
-      </body>
-    </html>
-  </x:transform>
-</jsp:root>
+      </ui:composition>
