--- a/heron_wsgi/htdocs-heron/u/checklist.html
+++ b/heron_wsgi/htdocs-heron/u/checklist.html
@@ -1,20 +1,125 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>HERON Access</title></head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:py="http://genshi.edgewall.org/">
+<head>
+  <title>HERON Research Data Repository</title>
+  <style type="text/css">
+    .photo {text-align: center; margin-bottom: 1em }
+  </style>
+</head>
 <body>
+  <h1>HERON Research Data Repository</h1>
+
+  <div id="heron-tricol-01" class="photo">
+    <img src="static/220px-Heron_tricol_01.JPG" alt=""/>
+  </div>
+
+  <p>Welcome, ${affiliate.givenname} ${affiliate.sn},
+  ${affiliate.title} (<code>${affiliate.cn}</code>).</p>
+
+  <p>Access requires 3 things:</p>
+
+  <form method="post" action="@@">
+    <ol>
+      <li>
+	<label>
+	  <input py:attrs="faculty" type="checkbox" disabled="disabled" />faculty?
+	</label>
+	<div py:if="executive">
+	  <input py:attrs="executive" type="checkbox"
+		 disabled="disabled" />executive?
+	</div>
+	<div py:if="not faculty and not executive">
+	  <label>
+	    <input py:attrs="sponsored" type="checkbox" disabled="disabled" />sponsored?
+	  </label>
+	</div>
+      </li>
+
+      <li>
+	<label>
+	  <input type="checkbox" disabled="disabled" py:attrs="trainingCurrent" />
+	HSC Training is complete and current?</label>
+      </li>
+
+      <li>
+	<label>
+	  <input type="checkbox" checked="checked" py:attrs="signatureOnFile" />
+	  signed system access agreement?
+	</label>
+      </li>
+    </ol>
+
+    <p><input type="submit" py:attrs="accessDisabled" value="Login" /> <br />
+    to the HERON i2b2 Query and Analysis Tool</p>
+
+  </form>
+
+  <ul>
+    <li><a href="SponsorshipServlet?init_type=VIEW_ONLY">HERON
+    Sponsorship Request</a>
+    </li>
+    <li><a href="SponsorshipServlet?init_type=DATA_ACCESS">HERON
+    Data Usage Request</a>
+    </li>
+    <li><a href="droctools.jspx">DROC Oversight Tools</a></li>
+    <li><a
+	    href="http://biostat-pts.kumc.edu/eres/jsp/kumcpr.jsp"
+	    >Biostatistics Department Project Request Form</a>
+    </li>
+  </ul>
 
 
-<dl>
-<dt>affiliate</dt><dd> ${affiliate}</dd>
-<dt>affiliate title</dt><dd> ${affiliate.title}</dd>
-<dt>training expired</dt><dd>${trainingExpired}</dd>
-<dt>training expiration</dt><dd> ${trainingExpiration}</dd>
-<dt>faculty? </dt><dd>${faculty}</dd>
-<dt>executive?</dt><dd> ${executive}</dd>
-<dt>sponsored?</dt><dd> ${sponsored}</dd>
-<dt>signed system access agreement?</dt><dd> ${signatureOnFile}</dd>
-<dt>ok to access i2b2?</dt><dd> ${repositoryUser}</dd>
-</dl>
+  <!-- TODO: why does this para turn blue? -->
+  <p>HERON (Healthcare Enterprise Repository for Ontological Narration)
+  allows you to explore de-identified data from Epic/O2 (the
+  hospital electronic medical records) and IDX (the clinical billing
+  system).
+  </p>
 
+  <p>The <a href="AuthServlet">HERON i2b2 Query and Analysis Tool</a>
+  is the main tool for composing queries such as "how many patients
+  in the repository have been diagnosed with diabetes and live within
+  20 miles of the KUMC campus?"</p>
+
+  <p>Access to de-identified data is non-human subjects research and
+  does not require IRB approval. For qualified faculty who want
+  <em>view-only</em> access to do patient count queries, executing
+  a system access agreement is the only requirement.</p>
+
+  <p><a href=
+	"http://informatics.kumc.edu/work/wiki/HERONTrainingMaterials"
+	>Getting Access to HERON</a> explains the process in detail.
+  </p>
+
+  <p>A Data Request Oversight Committee (DROC) oversees requests to:</p>
+  <ul>
+    <li><a href="SponsorshipServlet?init_type=VIEW_ONLY">sponsor
+    collaborators and research team members</a></li>
+
+    <li><a href="SponsorshipServlet?init_type=DATA_ACCESS">extract
+    data sets</a></li>
+  </ul>
+
+  <p>The
+  <a href=
+     "http://informatics.kumc.edu/work/blog/2011/07/first-clinic"
+     >Frontiers Clinical/Translational Informatics Clinic</a>
+  meets every other Tuesday
+  for investigators needing assistance using informatics tools
+  for data exploration, cohort discovery, and data collection.
+  The clinic is a brainstorming session and an education forum for
+  investigators and informatics to share knowledge, provide feedback,
+  and optimize the use of systems.</p>
+
+  <p>To set up consultation regarding your project, complete a
+  <a href="http://biostat-pts.kumc.edu/eres/jsp/kumcpr.jsp"
+     >Biostatistics Department Project Request Form</a>.
+  </p>
+
+  <p><small><a href="#heron-tricol-01">photo</a> credit:
+  <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw"
+     >Christopher Harshaw</a></small>
+  </p>
 </body>
 </html>
