link to REDCap request forms
--HG--
branch : frontiers-layout

--- a/heron_wsgi/htdocs-heron/u/checklist.html
+++ b/heron_wsgi/htdocs-heron/u/checklist.html
@@ -9,13 +9,13 @@
 <body>
   <div id="menu">
   <ul>
-    <li><a href="SponsorshipServlet?init_type=VIEW_ONLY">HERON
+    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">HERON
     Sponsorship Request</a>
     </li>
-    <li><a href="SponsorshipServlet?init_type=DATA_ACCESS">HERON
+    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">HERON
     Data Usage Request</a>
     </li>
-    <li><a href="droctools.jspx">DROC Oversight Tools</a></li>
+    <li><a href="https://redcap.kumc.edu/redcap_v4.1.0/setup.php?pid=238">DROC Oversight Tools</a></li>
   </ul>
   </div>
 
@@ -54,10 +54,10 @@
 
   <p>A Data Request Oversight Committee (DROC) oversees requests to:</p>
   <ul>
-    <li><a href="SponsorshipServlet?init_type=VIEW_ONLY">sponsor
+    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">sponsor
     collaborators and research team members</a></li>
 
-    <li><a href="SponsorshipServlet?init_type=DATA_ACCESS">extract
+    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">extract
     data sets</a></li>
   </ul>
 
@@ -95,7 +95,9 @@
     </p>
 
   <form method="post" action="@@">
-    <p><input type="submit" py:attrs="accessDisabled" value="Login" /></p>
+    <p>
+      <input type="submit" py:attrs="accessDisabled" value="Login to i2b2" />
+    </p>
     <ol>
       <li>
 	<label>
@@ -125,7 +127,7 @@
       <li>
 	<label>
 	  <input type="checkbox" checked="checked" py:attrs="signatureOnFile" />
-	  Signed <a href="@@">system access agreement</a>?
+	  Signed <a href="https://redcap.kumc.edu/surveys/index.php?s=npRuTQ">system access agreement</a>?
 	</label>
       </li>
     </ol>
