REDCap suvey linkage seems to be working (#547)  - tweak redcap.ini conventions  - include email, full_name in link
--HG--
branch : frontiers-layout

--- a/heron_wsgi/htdocs-heron/u/checklist.html
+++ b/heron_wsgi/htdocs-heron/u/checklist.html
@@ -127,7 +127,7 @@
       <li>
 	<label>
 	  <input type="checkbox" checked="checked" py:attrs="signatureOnFile" />
-	  Signed <a href="https://redcap.kumc.edu/surveys/index.php?s=npRuTQ">system access agreement</a>?
+	  Signed <a href="saa_survey">system access agreement</a>?
 	</label>
       </li>
     </ol>
