flesh out implementation of i2b2 login button
--HG--
branch : frontiers-layout

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -93,7 +93,7 @@
     <p>${affiliate.givenname} ${affiliate.sn} (<code>${affiliate.cn}</code>):
     </p>
 
-  <form method="post" action="@@">
+  <form method="post" action="${i2b2_login_path}">
     <p>
       <input type="submit" py:attrs="accessDisabled" value="Login to i2b2" />
     </p>
