page tweaks: log in -> start, raven -> heron
--HG--
branch : frontiers-layout

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -95,7 +95,7 @@
 
   <form method="post" action="${i2b2_login_path}">
     <p>
-      <input type="submit" py:attrs="accessDisabled" value="Login to i2b2" />
+      <input type="submit" py:attrs="accessDisabled" value="Start Query Tool" />
     </p>
     <ol>
       <li>
