- add oversight path link - fix direction of signature on file
--HG--
branch : frontiers-layout

--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="menu">
   <ul>
-    <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">HERON
+    <li><a href="${oversight_path}">HERON
     Sponsorship Request</a>
     </li>
     <li><a href="https://redcap.kumc.edu/surveys/?s=rRYkiH">HERON
@@ -126,7 +126,7 @@
 
       <li>
 	<label>
-	  <input type="checkbox" checked="checked" py:attrs="signatureOnFile" />
+	  <input type="checkbox" disabled="disabled" py:attrs="signatureOnFile" />
 	  Signed <a href="${saa_path}">system access agreement</a>?
 	</label>
       </li>
