--- a/heron_wsgi/htdocs-heron/index.html
+++ b/heron_wsgi/htdocs-heron/index.html
@@ -122,6 +122,7 @@
 	<a
 	href="http://www2.kumc.edu/researchcompliance/human_subjects_tutorial_inst.htm"
 	>Human subjects training</a> is complete and current?</label>
+	  <a py:if="not trainingCurrent" href="#training-records">*</a>
       </li>
 
       <li>
@@ -132,6 +133,11 @@
       </li>
     </ol>
 
+    <p py:if="not trainingCurrent" py:with="admin_mailbox='heron-admin@kumc.edu'">
+      <em id="training-records">*If you believe the records of your training are out of date,
+      please contact <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records"
+      >heron-admin@kumc.edu</a>.</em>
+    </p>
   </form>
   </div>
       <div class="header png">
