add test for sponsorship (not integrated with web layer) (#535)

--- a/heron_wsgi/admin_lib/mockDirectory.html
+++ b/heron_wsgi/admin_lib/mockDirectory.html
@@ -22,6 +22,14 @@
 	<b class="email">bill.student@js.example</b> <br />
 	Faculty? <em class="kumcPersonFaculty">N</em> <br />
 	Job Code: <code class="kumcPersonJobcode">0</code></li>
+
+	<li class="hcard" id="some.one"><span class="n"><b
+		class="family-name">One</b>, <span class="given-name">Some</span></span>
+	<br />
+	<b class="email">some.one@js.example</b> <br />
+	Faculty? <em class="kumcPersonFaculty">N</em> <br />
+	Job Code: <code class="kumcPersonJobcode">0</code>
+	trained thru: <strong class="dtend">2012-01-01</strong></li>
 </ul>
 </body>
 </html>
